# mini-test.c

./: Makefile  meson.build
src/: spawn-unix.c  spawn-win.c
